--- a/Cookbook/_config.yml
+++ b/Cookbook/_config.yml
@@ -45,5 +45,5 @@ parse:
   myst_enable_extensions:
     # don't forget to list any other extensions you want enabled,
     # including those that are enabled by default!
-    - dollarmath
+    # dollarmath
     - amsmath
