--- a/Cookbook/_config.yml
+++ b/Cookbook/_config.yml
@@ -35,15 +35,15 @@ html:
   use_repository_button: true
 
 sphinx:
+  recursive_update: true
   config:
     suppress_warnings: ["mystnb.unknown_mime_type"]
-    html_js_files:
-      - https://cdnjs.cloudflare.com/ajax/libs/require.js/2.3.4/require.min.js
-    mathjax_path: https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js
+    # html_js_files: 
+    #   - "https://cdnjs.cloudflare.com/ajax/libs/require.js/2.3.4/require.min.js"
 
-parse:
-  myst_enable_extensions:
-    # don't forget to list any other extensions you want enabled,
-    # including those that are enabled by default!
-    # dollarmath
-    - amsmath
+# parse:
+#   myst_enable_extensions:
+#     # don't forget to list any other extensions you want enabled,
+#     # including those that are enabled by default!
+#     # - dollarmath
+#     - amsmath
